# origami

./: .gitignore  Cargo.toml  Makefile  renovate.json
.github/workflows/: ci.yml
.zed/: settings.json
browser/: package.json  rsbuild.config.ts
browser/src/: App.vue
document/: Cargo.toml
document/src/: lib.rs
frontend/: biome.json  package.json
frontend/src/: App.vue  doc.ts  env.d.ts
migrate/: Cargo.toml  README.md
migrate/migrations/: user.v1.json
migrate/src/: lens.rs  lib.rs  migration.rs  migrator.rs  schema.rs  type_.rs  value.rs
migrate/tests/: cli_tests.rs
migrate/tests/cli/: new.md  schema.md
migrate/tests/cli/new.out/migrations/: user.1.json
migrate/tests/cli/schema.in/migrations/: user.v1.json  user.v2.json  user.v3.json
migrate/tests/migrations/: user.v1.json  user.v2.json  user.v3.json
migration/: Cargo.toml  README.md
migration/src/: lens.rs  lib.rs  migration.rs  migrator.rs
migration/test/migrations/: user.v1.json  user.v1.yaml  user.v2.json  user.v2.yaml  user.v3.json  user.v3.yaml
migrator/: Cargo.toml
migrator/src/: lens.rs  lib.rs  migration.rs  migrator.rs  type_.rs  value.rs
patch/: Cargo.toml
patch/src/: lib.rs  path.rs
scripts/: make-profiling-build.sh
store/: Cargo.toml
store/pkg/: .gitignore  package.json
store/src/: document.rs  fugue.rs  hlc.rs  hub.rs  idb.rs  js_store.rs  lib.rs  op.rs  operation.rs  storage.rs  store.rs  test_helpers.rs  timestamp.rs
store/src/clock/: js_date.rs  mod.rs  system_time.rs
store/src/document/: assign.rs  list.rs  map.rs  object.rs  operation.rs  order.rs  value.rs
store/src/hub/: handle.rs  reader.rs  subscriptions.rs
store/src/node/: local_storage_node.rs  memory_node.rs  mod.rs
store/src/storage/: idb.rs  memory.rs  mod.rs
thinking/: conclicting-schema-transformations.md
