[package]
name = "store"
version = "0.1.0"
authors = ["Brian Hicks <brian@brianthicks.com>"]
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = { version = "0.2.100", features = ["strict-macro"] }

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }
uuid = { version = "1.17.0", features = ["rng", "v4", "js"] }
js-sys = "0.3.77"
thiserror = "2.0.12"
patch = { path = "../patch" }
serde = { version = "1.0.219", features = ["derive"] }
serde-wasm-bindgen = "0.6.5"
serde_json = "1.0.140"
json-patch = "4.0.0"

[dev-dependencies]
pretty_assertions = "1.4.1"
proptest = "1.6.0"
proptest-derive = "0.5.1"
wasm-bindgen-test = "0.3.50"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
lto = true
codegen-units = 1

[package.metadata.wasm-pack.profile.release]
wasm-opt = ['-Oz']
