[package]
name = "store"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
uuid = { version = "1.17.0", features = ["js", "v4", "rng"] }
migrate = { path = "../migrate" }
wasm-bindgen = { version = "0.2.100", features = ["strict-macro"] }

[dev-dependencies]
pretty_assertions = "1.4.1"
proptest = "1.7.0"
proptest-derive = "0.6.0"
